# devana

./: .gitchangelog.rc  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  build_doc.py  build_local.py  check_code.py  requirements.txt  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: code_quality.yml  release.yml  tests.yml
doc_src/: about.rst  conf.py  contributing.rst  how_to_start.rst  maintenance.rst  roadmap.rst
doc_src/_templates/: disclaimer.rst  module.rst_t  package.rst_t  toc.rst_t
doc_src/api/: devana.code_generation.printers.default.rst  devana.code_generation.printers.rst  devana.code_generation.rst  devana.syntax_abstraction.rst  devana.utility.rst  modules.rst
doc_src/demos/: demo_accessors_generator.rst  demo_include_map.rst
docs/: about.html  changelog_list.html  contributing.html  genindex.html  how_to_start.html  index.html  maintenance.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js
docs/.doctrees/: about.doctree  changelog_list.doctree  contributing.doctree  environment.pickle  how_to_start.doctree  index.doctree  maintenance.doctree  roadmap.doctree
docs/_modules/: index.html
docs/_sources/: changelog_list.rst.txt  how_to_start.rst.txt  index.rst.txt  maintenance.rst.txt  roadmap.rst.txt
docs/api/: devana.code_generation.html  devana.code_generation.printers.default.html  devana.code_generation.printers.html  devana.html  devana.preprocessing.components.extractors.html  devana.preprocessing.components.html  modules.html  (+13 more)
tests/: __init__.py  helpers.py
(+449 files in other folders)
