[metadata]
name = devana
version = attr: devana._version.__version__
author = JhnW
author_email = jhnw.global@gmail.com
description = Python package to parse and generate C/C++ code as context aware preprocessor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JhnW/devana
project_urls =
    Source = https://github.com/JhnW/devana
    Bug Tracker = https://github.com/JhnW/devana/issues
    Documentation = http://jhnw.github.io/devana
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Compilers
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
keywords =
    C++
    development
    parser
    generator
license = LGPLv2+


[options]
python_requires = >=3.8
install_requires =
    libclang==16.0.6
packages =find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src
exclude = src/devana